# AndroidGL2Player

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/android/gl2player/: AndroidManifest.xml  DrawBitmap.java  DrawObject.java  DrawVideo.java  FullScreenVideoView.java  FullscreenQuadUV.java  GL2Event.java  GL2EventSetBitmap.java  GL2EventSetLayout.java  GL2FloatBuffer.java  GL2JNILib.java  GL2Layout.java  GL2PlayerActivity.java  GL2PlayerView.java  GL2Renderer.java  GL2Texture.java  GL2VideoTexture.java  QuadUV.java  RenderLayout.java  ShaderModule.java  ShaderOpaque.java  VideoLayout.java  VideoPlayer.java
app/src/main/java/com/android/gl2player/async/: GL2Event.java  GL2EventSetBitmap.java  GL2EventSetLayout.java
app/src/main/java/com/android/gl2player/drawobject/: DrawBitmap.java  DrawObject.java  DrawText.java  DrawVideo.java  GL2VideoTexture.java  ShaderOpaque.java  ShaderText.java
app/src/main/java/com/android/gl2player/gl/: GL2FloatBuffer.java  GL2Texture.java  GLClass.java  QuadUV.java  RenderLayout.java  ShaderModule.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
